--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -74,7 +74,7 @@ i {
   background-color: $accent-clr;
   color: $primary-clr;
   border-radius: 50%;
-  opacity: 0.8;
+  // opacity: 0.8;
   display: none;
   text-align: center;
   font-size: 24px;
@@ -83,7 +83,7 @@ i {
     color: $accent-clr;
     outline:  2px solid $accent-clr;
     background-color: $primary-clr;
-    opacity: 1;
+    // opacity: 1;
   }
 }
 
