--- a/css/media.css
+++ b/css/media.css
@@ -104,6 +104,16 @@
   .about__right-skill .icon i {
     font-size: 35px;
   }
+  .project__filter-boxes {
+    margin: 60px 0 40px;
+  }
+  .project__filter-box {
+    width: 300px;
+    height: 250px;
+  }
+  .project__filter-box .overlay i {
+    font-size: 20px;
+  }
 }
 /* SMALL DEVICES (LANSCAPE PHONE, 576px and up) */
 @media (min-width: 576px) and (max-width: 767.98px) {
@@ -201,6 +211,10 @@
   .about__left-social i {
     font-size: 30px;
   }
+  .project__filter-box {
+    width: 300px;
+    height: 300px;
+  }
 }
 /* LARGE DEVICES (DESKTOPS, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199.98px) {
@@ -215,4 +229,10 @@
   }
 }
 /* EXTRA LARGE DEVICES (LARGE DESKTOPS, 1200px and up) */
+@media (min-width: 1200px) and (max-width: 1399.98px) {
+  .project__filter-box {
+    width: 300px;
+    height: 300px;
+  }
+}
 /* EXTRA EXTRA LARGE DEVICES (LARGE DESKTOPS, 1400px and up) */
