--- a/scss/main.scss
+++ b/scss/main.scss
@@ -370,7 +370,7 @@
 
     &-buttons {
       gap: 10px;
-      border: 1px solid red;
+      padding-top: 30px;
     }
 
     ul {
@@ -394,7 +394,7 @@
         cursor: pointer;
       }
     }
-    // The below code is to highlight the active button 
+    // The below code is to highlight the active button
     .active {
       color: $accent-clr;
       background-color: transparent;
@@ -408,7 +408,7 @@
       gap: 20px;
       margin: 80px 0 40px;
     }
-    
+
     &-box {
       display: block;
       width: 400px;
@@ -419,20 +419,25 @@
       transform: scale(1);
       opacity: 1;
 
-      &:hover .overlay {
-        opacity: 1;
+      &:hover {
+        transform: scale(1.01);
         transition: opacity 0.23s ease-in-out, transform 0.23s ease-in-out;
+
+        .overlay {
+          opacity: 1;
+          transition: opacity 0.23s ease-in-out, transform 0.23s ease-in-out;
+        }
       }
 
       .overlay {
         place-content: center;
         width: 100%;
         height: 100%;
-        background-color: #00000082;
+        background: linear-gradient(180deg, #1abc9c4d 0%, #1abc9c4d 100%);
+        border-radius: 8px;
         opacity: 0;
 
         i {
-          margin-top: 20px;
           padding: 20px;
           font-size: 30px;
           border: 5px solid $accent-clr;
@@ -449,7 +454,6 @@
       }
 
       @mixin bg-css {
-        // background-color: red;
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
@@ -463,6 +467,21 @@
 
       &:nth-child(2) {
         background-image: url("../img/hero/abdurrob.png");
+        @include bg-css;
+      }
+
+      &:nth-child(3) {
+        background-image: url("../img/hero/abdur rob.png");
+        @include bg-css;
+      }
+
+      &:nth-child(4) {
+        background-image: url("../img/hero/abdurrob.png");
+        @include bg-css;
+      }
+
+      &:nth-child(5) {
+        background-image: url("../img/hero/abdur rob.png");
         @include bg-css;
       }
     }
