--- a/css/main.css
+++ b/css/main.css
@@ -584,31 +584,73 @@ nav ul {
   color: #1abc9c;
 }
 .project__filter-box:nth-child(1) {
-  background-image: url("../img/hero/abdur rob.png");
+  background-image: url("../img/project/agency.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 .project__filter-box:nth-child(2) {
-  background-image: url("../img/hero/abdurrob.png");
+  background-image: url("../img/project/news.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 .project__filter-box:nth-child(3) {
-  background-image: url("../img/hero/abdur rob.png");
+  background-image: url("../img/project/edutech.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 .project__filter-box:nth-child(4) {
-  background-image: url("../img/hero/abdurrob.png");
+  background-image: url("../img/project/bookmark.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 .project__filter-box:nth-child(5) {
-  background-image: url("../img/hero/abdur rob.png");
+  background-image: url("../img/project/entripoti.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.project__filter-box:nth-child(6) {
+  background-image: url("../img/project/email2.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.project__filter-box:nth-child(7) {
+  background-image: url("../img/project/nipro.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.project__filter-box:nth-child(8) {
+  background-image: url("../img/project/taxi.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.project__filter-box:nth-child(9) {
+  background-image: url("../img/project/e-school.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.project__filter-box:nth-child(10) {
+  background-image: url("../img/project/email.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.project__filter-box:nth-child(11) {
+  background-image: url("../img/project/minimo.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.project__filter-box:nth-child(12) {
+  background-image: url("../img/project/saaslander.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
