Need to add few images again and also few links, changed box bg color, added go-to-top button in project file, removed more button from project file

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,8 +1,8 @@
-$primary-clr: #1C2833;
+$primary-clr: #1c2833;
 // $primary-clr: #000;
 $text-clr: #f5f5f5;
 
 $accent-clr: #1abc9c;
 
-$section-bg-clr: #ECF0F1;
+$section-bg-clr: #ecf0f1;
 // $section-bg-clr: #D6EAF8;
