--- a/css/main.css
+++ b/css/main.css
@@ -42,11 +42,11 @@ html {
 .header,
 .hero,
 .project {
-  background-color: #1C2833;
+  background-color: #1c2833;
 }
 
 .about {
-  background-color: #ECF0F1;
+  background-color: #ecf0f1;
 }
 
 p {
@@ -56,7 +56,7 @@ p {
 .btn {
   display: inline-block;
   padding: 15px 30px;
-  color: #1C2833;
+  color: #1c2833;
   background-color: #1abc9c;
   border: 1px solid transparent;
   border-radius: 8px;
@@ -91,7 +91,7 @@ i:hover {
   width: 40px;
   height: 45px;
   background-color: #1abc9c;
-  color: #1C2833;
+  color: #1c2833;
   border-radius: 50%;
   display: none;
   text-align: center;
@@ -100,7 +100,7 @@ i:hover {
 .go-to-top:hover {
   color: #1abc9c;
   outline: 2px solid #1abc9c;
-  background-color: #1C2833;
+  background-color: #1c2833;
 }
 
 .container {
@@ -183,7 +183,7 @@ nav ul {
   left: 0;
   width: 100%;
   height: calc(100vh - 70px);
-  background-color: #1C2833;
+  background-color: #1c2833;
   -webkit-transform: translateY(-100%);
           transform: translateY(-100%);
   -webkit-transition: opacity 0.3s ease, -webkit-transform 0.3s ease;
@@ -276,7 +276,7 @@ nav ul {
   border-color: #1abc9c;
 }
 .hero__content a:not(:last-child):hover {
-  color: #1C2833;
+  color: #1c2833;
   background-color: #1abc9c;
   border-color: transparent;
 }
@@ -341,7 +341,7 @@ nav ul {
 }
 .about__left-social i {
   font-size: 20px;
-  color: #1C2833;
+  color: #1c2833;
 }
 .about__left-social i:hover {
   color: #1abc9c;
@@ -364,11 +364,11 @@ nav ul {
 .about__right-text p {
   margin: 20px 0 30px;
   font-weight: 500;
-  color: #1C2833;
+  color: #1c2833;
   line-height: 25px;
 }
 .about__right-text-btn:hover {
-  background-color: #1C2833;
+  background-color: #1c2833;
   border: 1px solid transparent;
 }
 .about__right-skill {
@@ -467,7 +467,7 @@ nav ul {
           animation-delay: 30s;
 }
 .about__right-skill .icon7 i {
-  color: #1C2833;
+  color: #1c2833;
 }
 
 .project {
@@ -501,7 +501,7 @@ nav ul {
 }
 .project__filter-btn {
   padding: 10px 20px;
-  color: #1C2833;
+  color: #1c2833;
   background-color: #1abc9c;
   border: 1px solid transparent;
   border-radius: 8px;
@@ -535,7 +535,7 @@ nav ul {
   display: block;
   width: 400px;
   height: 400px;
-  border: 1px solid #ECF0F1;
+  background: rgba(236, 240, 241, 0.151);
   border-radius: 8px;
   -webkit-transition: opacity 0.23s ease-in-out, -webkit-transform 0.23s ease-in-out;
   transition: opacity 0.23s ease-in-out, -webkit-transform 0.23s ease-in-out;
@@ -568,19 +568,20 @@ nav ul {
   background: linear-gradient(180deg, rgba(26, 188, 156, 0.3019607843) 0%, rgba(26, 188, 156, 0.3019607843) 100%);
   border-radius: 8px;
   opacity: 0;
+  background-color: rgba(245, 245, 245, 0.616);
 }
 .project__filter-box .overlay i {
   padding: 20px;
   font-size: 30px;
   border: 5px solid #1abc9c;
   border-radius: 100%;
-  color: #1C2833;
+  color: #1c2833;
   background-color: #1abc9c;
   -webkit-transform: rotate(-35deg);
           transform: rotate(-35deg);
 }
 .project__filter-box .overlay i:hover {
-  background-color: #1C2833;
+  background-color: #1c2833;
   color: #1abc9c;
 }
 .project__filter-box:nth-child(1) {
@@ -626,13 +627,13 @@ nav ul {
   background-position: center;
 }
 .project__filter-box:nth-child(8) {
-  background-image: url("../img/project/taxi.webp");
+  background-image: url("../img/project/taxicab.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 .project__filter-box:nth-child(9) {
-  background-image: url("../img/project/e-school.webp");
+  background-image: url("../img/project/eschool.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -650,7 +651,7 @@ nav ul {
   background-position: center;
 }
 .project__filter-box:nth-child(12) {
-  background-image: url("../img/project/saaslander.webp");
+  background-image: url("../img/project/old/saaslander.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
