--- a/scss/main.scss
+++ b/scss/main.scss
@@ -410,7 +410,9 @@
       display: block;
       width: 400px;
       height: 400px;
-      border: 1px solid $section-bg-clr;
+
+      background: rgba(236, 240, 241, 0.151);
+
       border-radius: 8px;
       transition: opacity 0.23s ease-in-out, transform 0.23s ease-in-out;
       transform: scale(1);
@@ -430,9 +432,11 @@
         place-content: center;
         width: 100%;
         height: 100%;
+
         background: linear-gradient(180deg, #1abc9c4d 0%, #1abc9c4d 100%);
         border-radius: 8px;
         opacity: 0;
+        background-color: rgba(245, 245, 245, 0.616);
 
         i {
           padding: 20px;
@@ -491,11 +495,11 @@
         @include bg-css;
       }
       &:nth-child(8) {
-        background-image: url("../img/project/taxi.webp");
+        background-image: url("../img/project/taxicab.webp");
         @include bg-css;
       }
       &:nth-child(9) {
-        background-image: url("../img/project/e-school.webp");
+        background-image: url("../img/project/eschool.webp");
         @include bg-css;
       }
       &:nth-child(10) {
@@ -507,10 +511,9 @@
         @include bg-css;
       }
       &:nth-child(12) {
-        background-image: url("../img/project/saaslander.webp");
+        background-image: url("../img/project/old/saaslander.webp");
         @include bg-css;
       }
-      
     }
   }
 }
