--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,9 @@ html {
 
 .header,
 .hero,
-.project {
+.project,
+.contact,
+.footer {
   background-color: #1c2833;
 }
 
@@ -85,23 +87,18 @@ i:hover {
 }
 
 .go-to-top {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  padding: 8px;
-  width: 40px;
-  height: 45px;
-  background-color: #1abc9c;
-  color: #1c2833;
-  border-radius: 50%;
   display: none;
+  position: fixed;
+  bottom: 60px;
+  right: 20px;
+  font-size: 14px;
+  font-weight: 700;
+  color: #1abc9c;
   text-align: center;
-  font-size: 24px;
+  line-height: 1;
 }
 .go-to-top:hover {
-  color: #1abc9c;
-  outline: 2px solid #1abc9c;
-  background-color: #1c2833;
+  color: #1c2833;
 }
 
 .container {
@@ -702,4 +699,35 @@ nav ul {
 .service__btn {
   margin: 40px auto 0;
   text-align: center;
+}
+
+.footer {
+  padding: 25px 0 20px;
+  border-top: 1px solid #ecf0f1;
+  -o-border-image: linear-gradient(to right, transparent 5%, rgba(129, 129, 129, 0.3803921569) 50%, transparent 95%) 1;
+     border-image: -webkit-gradient(linear, left top, right top, color-stop(5%, transparent), color-stop(50%, rgba(129, 129, 129, 0.3803921569)), color-stop(95%, transparent)) 1;
+     border-image: linear-gradient(to right, transparent 5%, rgba(129, 129, 129, 0.3803921569) 50%, transparent 95%) 1;
+}
+.footer__container {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.footer__copywrite {
+  font-size: 12px;
+  font-weight: 700;
+}
+.footer__social {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+  color: #f5f5f5;
+}
+.footer__social span {
+  font-size: 12px;
+  font-weight: 600;
 }
