started contact section

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,10 +1,18 @@
+// Colors ------------
 $primary-clr: #1c2833;
 // $primary-clr: #000;
+
 $text-clr: #f5f5f5;
 
 $accent-clr: #1abc9c;
 
 $section-bg-clr: #ecf0f1;
+// $section-bg-clr: #fff;
 // $section-bg-clr: #D6EAF8;
 
+// Box Background Color ------------
+$box-bg: rgba(236, 240, 241, 0.151);
+// $box-bg: #ecf0f1c5;
+
+// Border Color ------------
 $border-radius: 8px;
