--- a/css/main.css
+++ b/css/main.css
@@ -533,7 +533,7 @@ nav ul {
   display: block;
   width: 400px;
   height: 400px;
-  background: rgba(236, 240, 241, 0.151);
+  background-color: rgba(236, 240, 241, 0.151);
   border-radius: 8px;
   -webkit-transition: opacity 0.23s ease-in-out, -webkit-transform 0.23s ease-in-out;
   transition: opacity 0.23s ease-in-out, -webkit-transform 0.23s ease-in-out;
@@ -699,6 +699,81 @@ nav ul {
 .service__btn {
   margin: 40px auto 0;
   text-align: center;
+}
+
+.contact {
+  height: 100%;
+  border: 1px solid red;
+}
+.contact__container {
+  border: 1px solid #fff;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 20px;
+  width: 70%;
+}
+.contact__info, .contact__form {
+  border: 1px solid cyan;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+.contact__info {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+}
+.contact__info h4 {
+  margin-bottom: 15px;
+  font-size: 18px;
+  font-weight: 500;
+  color: #f5f5f5;
+}
+.contact__info-box {
+  gap: 20px;
+}
+.contact__info-box .icon :hover {
+  color: #fff;
+  cursor: default;
+}
+.contact__info-box .icon i {
+  padding: 15px;
+  border: 1px solid #fff;
+  border-radius: 50%;
+}
+.contact__info-box .icon i :hover {
+  color: #fff;
+  cursor: default;
+}
+.contact__info-box .content :first-child {
+  font-weight: 700;
+}
+.contact__info-box .content :last-child {
+  margin-top: 5px;
+  font-weight: 400;
+}
+.contact__form-name, .contact__form-email, .contact__form-message {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 15px;
+  padding: 10px 0;
+  color: #f5f5f5;
+  border: 1px solid red;
+}
+.contact__form-name input,
+.contact__form-name textarea, .contact__form-email input,
+.contact__form-email textarea, .contact__form-message input,
+.contact__form-message textarea {
+  padding: 20px 0;
+  border-radius: 8px;
+}
+.contact__form-name textarea, .contact__form-email textarea, .contact__form-message textarea {
+  padding: 40px 0;
 }
 
 .footer {
