completed contact me section now prokect section images,links,animation and making the form dynamic left

--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -87,7 +87,7 @@ i {
 .container {
   margin: 0 auto;
   width: 90%;
-  // border: 1px solid red;
+  // border: 1px solid white;
 }
 
 .flex-wrapper,
@@ -103,8 +103,4 @@ nav ul {
 
 .flex {
   display: flex;
-}
-
-.align-center {
-  align-items: center;
 }
