--- a/css/main.css
+++ b/css/main.css
@@ -129,12 +129,6 @@ nav ul {
   display: flex;
 }
 
-.align-center {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
 .header {
   padding-bottom: 8px;
   width: 100%;
@@ -702,19 +696,20 @@ nav ul {
 }
 
 .contact {
+  padding: 60px 0;
   height: 100%;
-  border: 1px solid red;
 }
 .contact__container {
-  border: 1px solid #fff;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 20px;
-  width: 70%;
+  width: 80%;
 }
 .contact__info, .contact__form {
-  border: 1px solid cyan;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -724,7 +719,7 @@ nav ul {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 20px;
+  gap: 40px;
 }
 .contact__info h4 {
   margin-bottom: 15px;
@@ -733,6 +728,9 @@ nav ul {
   color: #f5f5f5;
 }
 .contact__info-box {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 20px;
 }
 .contact__info-box .icon :hover {
@@ -760,20 +758,28 @@ nav ul {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 15px;
+  gap: 10px;
   padding: 10px 0;
+  outline: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
   color: #f5f5f5;
-  border: 1px solid red;
+}
+.contact__form-name :focus, .contact__form-email :focus, .contact__form-message :focus {
+  outline: none;
 }
 .contact__form-name input,
 .contact__form-name textarea, .contact__form-email input,
 .contact__form-email textarea, .contact__form-message input,
 .contact__form-message textarea {
-  padding: 20px 0;
+  padding: 20px;
   border-radius: 8px;
 }
 .contact__form-name textarea, .contact__form-email textarea, .contact__form-message textarea {
-  padding: 40px 0;
+  height: 100px;
+}
+.contact__form-btn {
+  margin-top: 20px;
 }
 
 .footer {
