--- a/css/media.css
+++ b/css/media.css
@@ -114,6 +114,9 @@
     width: 300px;
     height: 250px;
   }
+  .project__filter-box .overlay {
+    place-content: center;
+  }
   .project__filter-box .overlay i {
     font-size: 20px;
   }
@@ -122,6 +125,27 @@
   }
   .service__wrapper-box {
     width: 100%;
+  }
+  .contact {
+    padding: 40px 0;
+  }
+  .contact__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    gap: 50px;
+    padding: 5px;
+    width: 90%;
+  }
+  .contact__info, .contact__form {
+    width: 100%;
+  }
+  .contact__info {
+    gap: 30px;
+  }
+  .contact__info-box {
+    gap: 10px;
   }
 }
 /* SMALL DEVICES (LANSCAPE PHONE, 576px and up) */
@@ -178,6 +202,17 @@
   .service__wrapper-box {
     width: 100%;
   }
+  .contact__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    gap: 60px;
+    padding: 20px;
+  }
+  .contact__info, .contact__form {
+    width: 100%;
+  }
 }
 /* MEDIUM DEVICES (TABLETS, 768px and up) */
 @media (min-width: 768px) and (max-width: 991.98px) {
@@ -232,6 +267,17 @@
   }
   .service__wrapper-box {
     width: 48%;
+  }
+  .contact__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    gap: 60px;
+    padding: 20px;
+  }
+  .contact__info, .contact__form {
+    width: 100%;
   }
 }
 /* LARGE DEVICES (DESKTOPS, 992px and up) */
