--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -9,6 +9,11 @@ html {
   scroll-behavior: smooth;
 }
 
+::selection {
+  color: $primary-clr;
+  background-color: $accent-clr;
+}
+
 // Section Padding
 .section-padding {
   padding: 50px 0 30px;
