--- a/css/main.css
+++ b/css/main.css
@@ -140,10 +140,8 @@ nav ul {
 }
 
 .header {
-  padding-bottom: 8px;
+  padding: 15px 0;
   width: 100%;
-  height: 70px;
-  place-content: end;
   z-index: 200;
   -webkit-transition: -webkit-backdrop-filter 0.3s ease;
   transition: -webkit-backdrop-filter 0.3s ease;
