--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,12 +4,13 @@
 
 // Header Start
 .header {
-  padding-bottom: 8px;
+  padding: 15px 0;
   width: 100%;
-  height: 70px;
-  place-content: end;
   z-index: 200;
   transition: backdrop-filter 0.3s ease;
+  // padding-bottom: 8px;
+  // height: 70px;
+  // place-content: end;
 
   &__logo img {
     height: 50px;
