--- a/css/media.css
+++ b/css/media.css
@@ -303,3 +303,11 @@
   }
 }
 /* EXTRA EXTRA LARGE DEVICES (LARGE DESKTOPS, 1400px and up) */
+@media (min-width: 1537px) {
+  .hero,
+  .about,
+  .service,
+  .contact {
+    min-height: initial;
+  }
+}
