--- a/scss/main.scss
+++ b/scss/main.scss
@@ -105,8 +105,8 @@
 
 // Hero Start
 .hero {
-  place-content: center;
-  height: 100vh;
+  // place-content: center;
+  // min-height: 100vh;
 
   &__wrapper {
     grid-template-columns: repeat(12, 1fr);
@@ -182,8 +182,8 @@
 
 // About Me Start
 .about {
-  height: 100vh;
-  place-content: center;
+  // min-height: 100vh;
+  // place-content: center;
 
   &__wrapper {
     align-items: center;
@@ -430,7 +430,7 @@
       .overlay {
         place-content: center;
         width: 100%;
-        height: 100%;
+        min-height: 100%;
 
         background: linear-gradient(180deg, #1abc9c4d 0%, #1abc9c4d 100%);
         border-radius: $border-radius;
@@ -528,7 +528,8 @@
 
 // Service Start
 .service {
-  height: 100%;
+  // place-content: center;
+  // min-height: 100vh;
 
   &__wrapper {
     justify-content: center;
@@ -577,8 +578,9 @@
 
 // Contact Start
 .contact {
+  // place-content: center;
   padding: 60px 0;
-  height: 100%;
+  // min-height: 100vh;
 
   &__container {
     justify-content: space-between;
