--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,717 +1,13 @@
 @import "./reset";
 @import "./variables";
 @import "./common";
-
-// Header Start
-.header {
-  padding: 15px 0;
-  width: 100%;
-  z-index: 200;
-  transition: backdrop-filter 0.3s ease;
-  // padding-bottom: 8px;
-  // height: 70px;
-  // place-content: end;
-
-  &__logo img {
-    height: 50px;
-  }
-
-  &__nav ul {
-    gap: 50px;
-
-    li a {
-      font-weight: 400;
-    }
-  }
-
-  &__btn a {
-    padding: 15px 35px;
-    font-weight: 700;
-  }
-
-  &__hamburgermenu-icon {
-    display: none;
-
-    i {
-      font-size: 33px;
-    }
-
-    .fa-xmark {
-      display: none;
-    }
-  }
-}
-.scrolled {
-  background: #1c2833a8;
-  backdrop-filter: blur(7.9px);
-  -webkit-backdrop-filter: blur(7.9px);
-}
-// Hamburger Menu
-.hamburgermenu {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: calc(100vh - 70px);
-  background-color: $primary-clr;
-  transform: translateY(-100%);
-  transition: opacity 0.3s ease, transform 0.3s ease;
-  opacity: 0;
-  visibility: hidden;
-  z-index: 100;
-
-  &.active {
-    bottom: 0;
-    opacity: 1;
-    visibility: visible;
-    transform: translateY(0); /* Slide into view */
-  }
-
-  &.inactive {
-    opacity: 0;
-    visibility: hidden;
-    transform: translateY(-100%); /* Slide out of view */
-    transition: opacity 0.3s ease, transform 0.3s ease; /* Smooth transition */
-  }
-
-  &__container,
-  &__nav ul {
-    flex-direction: column;
-    align-items: center;
-    gap: 60px;
-  }
-
-  &__container {
-    padding: 50px 0;
-  }
-
-  &__btn {
-    display: block !important;
-  }
-}
-// this below codes are related to showing and not showing icons
-.menu-open .fa-bars-staggered {
-  display: none;
-}
-
-.menu-open .fa-xmark {
-  display: block;
-}
-
-.no-scroll {
-  overflow: hidden;
-}
-// Header End
-
-// Hero Start
-.hero {
-  // place-content: center;
-  // min-height: 100vh;
-
-  &__wrapper {
-    grid-template-columns: repeat(12, 1fr);
-    align-items: center;
-  }
-
-  &__content {
-    grid-area: 1 / 1 / 2 / 7;
-
-    h1 {
-      font-size: clamp(42px, 5.56vw, 90px);
-      width: 5ch;
-      line-height: 1;
-      color: transparent;
-      -webkit-text-stroke: 1px $accent-clr;
-    }
-
-    p {
-      margin: 20px 0 50px;
-      width: 85%;
-      line-height: 25px;
-
-      span {
-        font-weight: 700;
-        color: $accent-clr;
-      }
-    }
-
-    a {
-      &:not(:last-child) {
-        margin-right: 10px;
-        color: $accent-clr;
-        background-color: transparent;
-        border-color: $accent-clr;
-
-        &:hover {
-          color: $primary-clr;
-          background-color: $accent-clr;
-          border-color: transparent;
-        }
-      }
-    }
-  }
-
-  &__image {
-    grid-area: 1 / 7 / 2 / 12;
-
-    img {
-      width: 100%;
-      // height: 500px;
-      border: 5px solid $accent-clr;
-      border-radius: 50%;
-    }
-  }
-
-  &__social {
-    // align-self: end;
-
-    .social {
-      flex-direction: column;
-      justify-content: end;
-      align-items: end;
-      gap: 40px;
-      // border: 1px solid #fff;
-
-      i {
-        font-size: 15px;
-      }
-    }
-  }
-}
-// Hero End
-
-// About Me Start
-.about {
-  // min-height: 100vh;
-  // place-content: center;
-
-  &__wrapper {
-    align-items: center;
-    gap: 50px;
-  }
-
-  &__left,
-  &__right {
-    flex-direction: column;
-    gap: 20px;
-    height: fit-content;
-  }
-
-  &__left {
-    flex: 1;
-
-    &-image {
-      img {
-        width: 100%;
-      }
-    }
-
-    &-social {
-      justify-content: space-evenly;
-      padding: 15px 0;
-
-      i {
-        font-size: 20px;
-        color: $primary-clr;
-
-        &:hover {
-          color: $accent-clr;
-        }
-      }
-    }
-  }
-
-  &__right {
-    flex: 2;
-
-    &-text {
-      .wrap h2 {
-        font-size: clamp(24px, 4vw + 1rem, 35px);
-      }
-
-      .typewrite {
-        display: inline-block;
-        font-size: 20px;
-        font-weight: 700;
-        color: $accent-clr;
-        border-right: 4px solid $accent-clr;
-      }
-
-      p {
-        margin: 20px 0 30px;
-        font-weight: 500;
-        color: $primary-clr;
-        line-height: 25px;
-      }
-
-      &-btn {
-        &:hover {
-          background-color: $primary-clr;
-          border: 1px solid transparent;
-        }
-      }
-    }
-
-    &-skill {
-      overflow: hidden;
-      position: relative;
-      align-items: center;
-      padding: 40px 0 30px;
-      mask-image: linear-gradient(
-        to right,
-        rgba(0, 0, 0, 0),
-        rgba(0, 0, 0, 1) 20%,
-        rgba(0, 0, 0, 1) 80%,
-        rgba(0, 0, 0, 0)
-      );
-
-      .icon {
-        position: absolute;
-        left: 100%;
-        animation-name: scrollLeft;
-        animation-duration: 40s;
-        animation-timing-function: linear;
-        animation-iteration-count: infinite;
-
-        i {
-          font-size: 50px;
-          &:hover {
-            color: $accent-clr;
-            transform: scale(1.2);
-            cursor: default;
-          }
-        }
-      }
-
-      @keyframes scrollLeft {
-        from {
-          left: 100%;
-        }
-        to {
-          left: -100px;
-        }
-      }
-
-      .icon1 {
-        animation-delay: 0s;
-
-        i {
-          color: #dd4b24;
-        }
-      }
-
-      .icon2 {
-        animation-delay: 5s;
-
-        i {
-          color: #254bde;
-        }
-      }
-
-      .icon3 {
-        animation-delay: 10s;
-
-        i {
-          color: #d1689a;
-        }
-      }
-
-      .icon4 {
-        animation-delay: 15s;
-
-        i {
-          color: #f4e225;
-        }
-      }
-
-      .icon5 {
-        animation-delay: 20s;
-        }
-      }
-
-      .icon6 {
-        animation-delay: 25s;
-
-        i {
-          color: #7f18f9;
-        }
-      }
-
-      .icon7 {
-        animation-delay: 30s;
-
-        i {
-          color: #28799e;
-        }
-      }
-
-      .icon8 {
-        animation-delay: 35s;
-
-        i {
-          color: $primary-clr;
-        }
-      }
-    }
-  }
-// About Me End
-
-// Project Start
-.project {
-  height: 100%;
-
-  &__container {
-    padding: 20px;
-    text-align: center;
-  }
-
-  &__filter {
-    flex-direction: column;
-    align-items: center;
-    gap: 40px;
-
-    &-buttons {
-      gap: 10px;
-      padding-top: 30px;
-    }
-
-    ul {
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 10px;
-    }
-
-    &-btn {
-      padding: 10px 20px;
-      color: $primary-clr;
-      background-color: $accent-clr;
-      border: 1px solid transparent;
-      border-radius: $border-radius;
-      transition: 0.3s ease-in-out;
-
-      &:hover {
-        color: $accent-clr;
-        background-color: transparent;
-        border: 1px solid $accent-clr !important;
-        cursor: pointer;
-      }
-    }
-    // The below code is to highlight the active button
-    .active {
-      color: $accent-clr;
-      background-color: transparent;
-      border: 1px solid $accent-clr !important;
-    }
-
-    &-boxes {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin: 80px 0 40px;
-    }
-
-    &-box {
-      display: block;
-      width: 400px;
-      height: 400px;
-      background-color: $box-bg;
-      border-radius: $border-radius;
-      transition: opacity 0.23s ease-in-out, transform 0.23s ease-in-out;
-      transform: scale(1);
-      opacity: 1;
-
-      &:hover {
-        transform: scale(1.01);
-        transition: opacity 0.23s ease-in-out, transform 0.23s ease-in-out;
-
-        .overlay {
-          opacity: 1;
-          transition: opacity 0.23s ease-in-out, transform 0.23s ease-in-out;
-        }
-      }
-
-      .overlay {
-        place-content: center;
-        width: 100%;
-        min-height: 100%;
-
-        background: linear-gradient(180deg, #1abc9c4d 0%, #1abc9c4d 100%);
-        border-radius: $border-radius;
-        opacity: 0;
-        background-color: rgba(245, 245, 245, 0.616);
-
-        i {
-          padding: 20px;
-          font-size: 30px;
-          border: 5px solid $accent-clr;
-          border-radius: 100%;
-          color: $primary-clr;
-          background-color: $accent-clr;
-          transform: rotate(-35deg);
-
-          &:hover {
-            background-color: $primary-clr;
-            color: $accent-clr;
-          }
-        }
-      }
-
-      @mixin bg-css {
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-      }
-
-      // Here u can add bg image of your projects
-      &:nth-child(1) {
-        background-image: url("../img/project/agency.webp");
-        @include bg-css;
-      }
-
-      &:nth-child(2) {
-        background-image: url("../img/project/news.webp");
-        @include bg-css;
-      }
-
-      &:nth-child(3) {
-        background-image: url("../img/project/edutech.webp");
-        @include bg-css;
-      }
-
-      &:nth-child(4) {
-        background-image: url("../img/project/bookmark.webp");
-        @include bg-css;
-      }
-
-      &:nth-child(5) {
-        background-image: url("../img/project/entripoti.webp");
-        @include bg-css;
-      }
-
-      &:nth-child(6) {
-        background-image: url("../img/project/e-commerce.webp");
-        @include bg-css;
-      }
-      &:nth-child(7) {
-        background-image: url("../img/project/nipro.webp");
-        @include bg-css;
-      }
-      &:nth-child(8) {
-        background-image: url("../img/project/taxicab.webp");
-        @include bg-css;
-      }
-      &:nth-child(9) {
-        background-image: url("../img/project/e-school.webp");
-        @include bg-css;
-      }
-      &:nth-child(10) {
-        background-image: url("../img/project/email1.webp");
-        @include bg-css;
-      }
-      &:nth-child(11) {
-        background-image: url("../img/project/minimo.webp");
-        @include bg-css;
-      }
-      &:nth-child(12) {
-        background-image: url("../img/project/ilander.webp");
-        @include bg-css;
-      }
-      &:nth-child(13) {
-        background-image: url("../img/project/email2.webp");
-        @include bg-css;
-      }
-      &:nth-child(14) {
-        background-image: url("../img/project/codext.webp");
-        @include bg-css;
-      }
-    }
-  }
-}
-// Project End
-
-// Service Start
-.service {
-  // place-content: center;
-  // min-height: 100vh;
-
-  &__wrapper {
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
-
-    &-box {
-      place-content: center;
-      padding: 20px;
-      width: 32%;
-      height: 280px;
-      border-radius: $border-radius;
-      box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-      transition: 0.3s ease-in-out;
-      cursor: default;
-
-      &:hover {
-        box-shadow: hsla(168, 76%, 42%, 0.55) 0px 2px 8px 0px;
-      }
-
-      i {
-        font-size: 40px;
-        font-weight: bold;
-        color: $accent-clr;
-      }
-
-      h2 {
-        margin: 20px 0;
-        font-weight: 700;
-      }
-
-      p {
-        font-weight: 500;
-        color: $primary-clr;
-        line-height: 25px;
-      }
-    }
-  }
-
-  &__btn {
-    margin: 40px auto 0;
-    text-align: center;
-  }
-}
-// Service End
-
-// Contact Start
-.contact {
-  // place-content: center;
-  padding: 60px 0;
-  // min-height: 100vh;
-
-  &__container {
-    justify-content: space-between;
-    align-items: center;
-    gap: 20px;
-    width: 80%;
-  }
-
-  &__info,
-  &__form {
-    flex: 1;
-  }
-
-  &__info {
-    flex-direction: column;
-    gap: 40px;
-    
-    h2 {
-      margin-bottom: 15px;
-      font-size: 18px;
-      font-weight: 500;
-      color: $text-clr;
-    }
-
-    &-box {
-      align-items: center;
-      gap: 20px;
-
-      .icon {
-        :hover {
-          color: #fff;
-          cursor: default;
-        }
-
-        i {
-          padding: 15px;
-          border: 1px solid #fff;
-          border-radius: 50%;
-
-          :hover {
-            color: #fff;
-            cursor: default;
-          }
-        }
-      }
-
-      .content {
-        :first-child {
-          font-weight: 700;
-        }
-
-        :last-child {
-          margin-top: 5px;
-          font-weight: 400;
-        }
-      }
-    }
-  }
-
-  &__form {
-    &-name,
-    &-email,
-    &-message {
-      flex-direction: column;
-      gap: 10px;
-      padding: 10px 0;
-      outline: none; 
-      box-shadow: none;
-      color: $text-clr;
-
-      :focus {
-        outline: none;
-      }
-
-      input,
-      textarea {
-        padding: 20px;
-        border-radius: $border-radius;
-      }
-
-      textarea {
-        height: 100px;
-      }
-    }
-
-    &-btn {
-      margin-top: 20px;
-    }
-  }
-
-  #status {
-    margin-top: 10px;
-  }
-}
-// Contact End
-
-// Footer Start
-.footer {
-  padding: 25px 0 20px;
-  border-top: 1px solid $section-bg-clr;
-  border-image: linear-gradient(
-      to right,
-      transparent 5%,
-      #81818161 50%,
-      transparent 95%
-    )
-    1;
-
-  &__container {
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  &__copywrite {
-    font-size: 12px;
-    font-weight: 700;
-  }
-
-  &__social {
-    align-items: center;
-    gap: 10px;
-    color: $text-clr;
-
-    span {
-      font-size: 12px;
-      font-weight: 600;
-    }
-  }
-}
-// Footer End
+@import "./utility"; 
+
+// SECTION CSS
+@import "./sections/header";
+@import "./sections/hero";
+@import "./sections/about";
+@import "./sections/project";
+@import "./sections/service";
+@import "./sections/contact";
+@import "./sections/footer";
